add BBBC032-35 to image sets list and updates (resolves #8)

--- a/htdocs/BBBC035/index.html
+++ b/htdocs/BBBC035/index.html
@@ -75,14 +75,9 @@
     <p>Images synthetically produced by MitoGen, part of CytoPacq (http://cbia.fi.muni.cz/simulator/). Simulation of Zeiss Axiovert 100S with a Micromax 1300-YHS camera and Plan-Apochromat 40X/1.3 (oil) objective lens was chosen to produce the images. Time step (min): 29.</p>
     <p>Please note that this dataset is the exact copy of the Fluo-N3DH-SIM+ dataset from the <a href="http://www.celltrackingchallenge.net/">Cell Tracking Challenge</a>. As such, the conditions on the use of the challenge datasets applies, see the bottom of the Cell Tracking Challenge's <a href="http://www.celltrackingchallenge.net/datasets.html">dataset page</a>. Especially, we ask to cite this <a href="http://rdcu.be/xUTE">Nature Methods</a> paper in any publication resulting from the use of this dataset. The dataset was obtained with permission and is licensed here under the Creative Commons license CC-BY.
         <ul>
-        <li>647 channel (BMP4blastocystC0): BMP4 transcripts</li>
-        <li>568 channel (BMP4blastocystC1): GAPD transcripts</li>
-        <li>488 channel (BMP4blastocystC2): WGA</li>
-        <li>405 channel (BMP4blastocystC3): Hoechst</li>
-
         <li>Width =  79.1101 - 80.7196 microns (639-652)</li>
         <li>Height =  43.2073 - 79.4816 microns (349-642)  </li>
-        <li>Depth =  59 microns (59)</li></p>
+        <li>Depth =  59 microns (59)</li></ul></p>
 
 <p><a href="BBBC035_v1_dataset.zip"><i class="icon-download-alt"></i> BBBC035_v1_dataset.zip (3.18 GB)</a></p>
 
@@ -98,11 +93,13 @@
 
 
     <h3>Published results using this image set</h3>
-    <p>Ulman V, Maška M, Magnusson KE, Ronneberger O, Haubold C, Harder N, Matula P, Matula P, Svoboda D, Radojevic M, Smal I et al. An objective comparison of cell tracking algorithms. Nature methods. 2017 Dec;14(12):1141. <a href="http://rdcu.be/xUTE">doi</a>: 10.1038/nmeth.4473. PMID: 29083403 PMCID: PMC5777536</p>
-    <p>Svoboda D, Ulman V. MitoGen: A Framework for Generating 3D Synthetic Time-Lapse Sequences of Cell Populations in Fluorescence Microscopy. IEEE Trans Med Imaging. 2017 Jan;36(1):310–321. <a href="http://dx.doi.org/10.1109/TMI.2016.2606545">doi</a>: 10.1109/TMI.2016.2606545. PMID: 27623575 </p>
+    <p>Ulman V, Maška M, Magnusson KE, Ronneberger O, Haubold C, Harder N, Matula P, Matula P, Svoboda D, Radojevic M, Smal I et al. An objective comparison of cell tracking algorithms. Nature Methods. 2017 Dec;14(12):1141. doi: <a href="http://rdcu.be/xUTE">10.1038/nmeth.4473</a>. PMID: 29083403 PMCID: PMC5777536</p>
+    <p>Svoboda D, Ulman V. MitoGen: A Framework for Generating 3D Synthetic Time-Lapse Sequences of Cell Populations in Fluorescence Microscopy. IEEE Trans Med Imaging. 2017 Jan;36(1):310–321. doi:<a href="http://dx.doi.org/10.1109/TMI.2016.2606545">10.1109/TMI.2016.2606545</a>. PMID: 27623575 </p>
     <h3>Recommended citation</h3>
 <p>&quot;We used image set <a href="">BBBC035v1</a> Ulman et al. 2018, available from the Broad Bioimage Benchmark Collection
   [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
+  <p><b>We also ask that you please cite this paper in any publications resulting from the use of this dataset:</b>
+      <p>Ulman V, Maška M, Magnusson KE, Ronneberger O, Haubold C, Harder N, Matula P, Matula P, Svoboda D, Radojevic M, Smal I et al. An objective comparison of cell tracking algorithms. Nature Methods. 2017 Dec;14(12):1141. doi: <a href="http://rdcu.be/xUTE">10.1038/nmeth.4473</a>. PMID: 29083403 PMCID: PMC5777536</p>
 
     <h3>Copyright</h3>
     <p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/">
@@ -118,7 +115,7 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-03-05</p>
+        <p>This page last updated 2018-03-06</p>
         
 	</footer>
     </div>
