--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -89,14 +89,14 @@
 	<tr>
 	  <td><a href="BBBC004/">BBBC004</a></td>
 	  <td>Synthetic cells</td>
-	  <td>“Fluorescent”</td>
+	  <td>Fluorescent</td>
 	  <td class="count">100</td>
 	  <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a> <a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
 	</tr>
 	<tr>
 	  <td><a href="BBBC005/">BBBC005</a></td>
 	  <td>Synthetic cells</td>
-	  <td>“Fluorescent”</td>
+	  <td>Fluorescent</td>
 	  <td class="count">19,200</td>
 	  <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a> <a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
 	</tr>
@@ -205,6 +205,34 @@
     <td>DIC</td>
     <td class="count">60</td>
     <td><a href="benchmarking.html#humanLabel" class="badge" rel="tooltip" title="Outlines of objects">O</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC032">BBBC032</a></td>
+    <td>Mouse embryo blastocyst cells</td>
+    <td>Fluorescent</td>
+    <td class="count">1</td>
+    <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC033">BBBC033</a></td>
+    <td>Mouse trophoblast stem cells</td>
+    <td>Fluorescent</td>
+    <td class="count">1</td>
+    <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC034">BBBC034</a></td>
+    <td>Induced pluripotent human stem cells</td>
+    <td>Bright field and fluorescent</td>
+    <td class="count">2</td>
+    <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC035">BBBC035</a></td>
+    <td>Simulated HL60 cells (from the Cell Tracking Challenge)</td>
+    <td>Fluorescent</td>
+    <td class="count">2</td>
+    <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
   </tr>
 
       </tbody>
