--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -234,6 +234,13 @@
     <td class="count">2</td>
     <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
   </tr>
+  <tr>
+    <td><a href="BBBC038">BBBC038</a></td>
+    <td>Kaggle 2018 Data Science Bowl</td>
+    <td>Fluorescent</td>
+    <td class="count">735</td>
+    <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
+  </tr>
 
       </tbody>
 
