--- a/htdocs/BBBC034/index.html
+++ b/htdocs/BBBC034/index.html
@@ -123,7 +123,7 @@
   [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
     <h3>Copyright</h3>
-    <p>These images are under copyright by the Allen Institute for Cell Science. Copyright Contact: <a href="mailto:lemueln@alleninstitute.org">Lemuel Navarro</a> .</p>
+    <p>These images are under copyright by the Allen Institute for Cell Science. Contact <a href="mailto:terms@alleninstitute.org">terms@alleninstitute.org</a> for more information about the copyright.</p>
 
 
 
@@ -132,7 +132,7 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-03-06</p>
+        <p>This page last updated 2018-04-25</p>
         
 	</footer>
     </div>
