Added u prefix to utf strings, ran dos2unix, made footer timestamp part of template rather than base for image sets

--- a/htdocs/BBBC008/index.html
+++ b/htdocs/BBBC008/index.html
@@ -137,14 +137,16 @@
 	  <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a>
 	  The images and ground truth are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a> by <a href="mailto:droot@broadinstitute.org">David Root</a> and <a href="http://www.broadinstitute.org/~anne/">Anne Carpenter</a>.
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
