--- a/htdocs/BBBC013/index.html
+++ b/htdocs/BBBC013/index.html
@@ -189,13 +189,17 @@
     by
     <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Ilya Ravkin</span>.
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
+
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
