--- a/htdocs/BBBC022/index.html
+++ b/htdocs/BBBC022/index.html
@@ -338,6 +338,10 @@ This work is published from:
   United States</span>.
 </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
 
 	</div>
@@ -345,8 +349,6 @@ This work is published from:
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
