--- a/htdocs/BBBC032/index.html
+++ b/htdocs/BBBC032/index.html
@@ -116,6 +116,10 @@
     <h3>Copyright</h3>
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> To the extent possible under law, <a href="mailto:n.rivron@hubrecht.eu">Nicolas Rivron</a> has waived all copyright and related or neighboring rights to <span property="dct:title">BBBC032v1</span>.</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-03-06</p>
+  </footer>
+
 
 
 	</div>
@@ -123,8 +127,6 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-03-06</p>
-        
 	</footer>
     </div>
 
