--- a/htdocs/BBBC034/index.html
+++ b/htdocs/BBBC034/index.html
@@ -125,6 +125,9 @@
     <h3>Copyright</h3>
     <p>These images are under copyright by the Allen Institute for Cell Science. Contact <a href="mailto:terms@alleninstitute.org">terms@alleninstitute.org</a> for more information about the copyright.</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-04-25</p>
+  </footer>
 
 
 	</div>
@@ -132,8 +135,6 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-04-25</p>
-        
 	</footer>
     </div>
 
