--- a/htdocs/BBBC004/index.html
+++ b/htdocs/BBBC004/index.html
@@ -149,14 +149,16 @@
       The Synthetic 1 images
     </span> are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a> by <a href="mailto:pekka.ruusuvuori@tut.fi">Pekka Ruusuvuori</a>.
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+  
 
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
