--- a/htdocs/BBBC005/index.html
+++ b/htdocs/BBBC005/index.html
@@ -176,13 +176,16 @@ examples of usage. There are 1200 image files.</p>
 	United States</span>.
 	</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
