--- a/htdocs/BBBC006/index.html
+++ b/htdocs/BBBC006/index.html
@@ -208,14 +208,16 @@
 	United States</span>.
 	</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
