--- a/htdocs/BBBC007/index.html
+++ b/htdocs/BBBC007/index.html
@@ -167,14 +167,16 @@ This work is published from:
   United States</span>.
 </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
