--- a/htdocs/BBBC011/index.html
+++ b/htdocs/BBBC011/index.html
@@ -130,14 +130,17 @@
     <p>&quot;We used image set <a href="">BBBC011v1</a> provided by Gary
     Ruvkun, available from the Broad Bioimage Benchmark Collection
     [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
-    
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
