--- a/htdocs/BBBC018/index.html
+++ b/htdocs/BBBC018/index.html
@@ -226,8 +226,6 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
@@ -244,6 +242,11 @@ $(document).ready(function () {
   $('.carousel').carousel();
 });
 </script>
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
