--- a/htdocs/BBBC019/index.html
+++ b/htdocs/BBBC019/index.html
@@ -381,8 +381,6 @@ other images and ran the algorithms.
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
@@ -399,6 +397,11 @@ $(document).ready(function () {
   $('.carousel').carousel();
 });
 </script>
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
