--- a/htdocs/BBBC020/index.html
+++ b/htdocs/BBBC020/index.html
@@ -139,8 +139,6 @@ cell. Outlines are named according to <var>filename</var><samp>_</samp><var>numb
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
@@ -157,6 +155,11 @@ $(document).ready(function () {
   $('.carousel').carousel();
 });
 </script>
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
