--- a/htdocs/BBBC025/index.html
+++ b/htdocs/BBBC025/index.html
@@ -265,6 +265,10 @@ This work is published from:
   United States</span>.
 </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
 
 	</div>
@@ -272,8 +276,6 @@ This work is published from:
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
