--- a/htdocs/BBBC026/index.html
+++ b/htdocs/BBBC026/index.html
@@ -130,14 +130,17 @@
       The BBBC026v1 image set
   </span> are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a> by <a href="mailto:anne@broadinstitute.org">Anne Carpenter</a> and <a href="mailto:David.Logan@pfizer.com">David Logan</a>.
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 
 	</div>
 
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-01-31</p>
-        
 	</footer>
     </div>
 
