--- a/htdocs/BBBC035/index.html
+++ b/htdocs/BBBC035/index.html
@@ -108,6 +108,10 @@
     <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
     by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"><a href="mailto:codesolorzano@unav.es">Carlos Ortiz de Solórzano</a></span>. </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-03-06</p>
+  </footer>
+
 
 
 	</div>
@@ -115,8 +119,6 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-03-06</p>
-        
 	</footer>
     </div>
 
