--- a/htdocs/BBBC038/index.html
+++ b/htdocs/BBBC038/index.html
@@ -110,6 +110,10 @@
     <h3>Copyright</h3>
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> Copyright: CC0. To the extent possible under law, the various contributors of the imagesets have waived all copyright and related or neighboring rights to <span property="dct:title">BBBC038v1</span>.</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-05-03</p>
+  </footer>
+
 
 
 	</div>
@@ -117,8 +121,6 @@
       </div>
 	<footer class="footer">
 	
-        <p>This page last updated 2018-04-26</p>
-        
 	</footer>
     </div>
 
