add images as gifs

--- a/htdocs/BBBC036/index.html
+++ b/htdocs/BBBC036/index.html
@@ -58,27 +58,27 @@
 <ul class="thumbnails">
     <li>
       <div class="thumbnail">
-        <img src="BBBC036_AGP.png" width="" height="186" alt="example image"/>
+        <img src="BBBC036_AGP.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC036_DNA.png" width="" height="186" alt="example image"/>
+        <img src="BBBC036_DNA.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC036_ER.png" width="" height="186" alt="example image"/>
+        <img src="BBBC036_ER.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC036_Mito.png" width="" height="186" alt="example image"/>
+        <img src="BBBC036_Mito.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC036_RNA.png" width="" height="186" alt="example image"/>
+        <img src="BBBC036_RNA.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
 </ul>
