--- a/htdocs/BBBC037/index.html
+++ b/htdocs/BBBC037/index.html
@@ -58,27 +58,27 @@
 <ul class="thumbnails">
     <li>
       <div class="thumbnail">
-        <img src="BBBC037_AGP.png" width="" height="186" alt="example image"/>
+        <img src="BBBC037_AGP.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC037_DNA.png" width="" height="186" alt="example image"/>
+        <img src="BBBC037_DNA.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC037_ER.png" width="" height="186" alt="example image"/>
+        <img src="BBBC037_ER.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC037_Mito.png" width="" height="186" alt="example image"/>
+        <img src="BBBC037_Mito.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
     <li>
       <div class="thumbnail">
-        <img src="BBBC037_RNA.png" width="" height="186" alt="example image"/>
+        <img src="BBBC037_RNA.gif" width="" height="186" alt="example image"/>
       </div>
     </li>
 </ul>
