--- a/htdocs/BBBC036/index.html
+++ b/htdocs/BBBC036/index.html
@@ -99,14 +99,13 @@
 
     <h3>Metadata</h3>
     <p>Description of columns: </p>
-    <p>
-        Descriptions of Metadata columns:
-        Metadata_broad_sample: Internal Broad ID of the compound
-        Metadata_pert_iname: Compound name
-        Metadata_pert_iname2: Alternative compound name
-        Metadata_moa: Mechanism of Actions
-        Metadata_target: Known protein targets of the compound.
-    </p>
+    <ul>
+        <li>Metadata_broad_sample: Internal Broad ID of the compound</li>
+        <li>Metadata_pert_iname: Compound name</li>
+        <li>Metadata_pert_iname2: Alternative compound name</li>
+        <li>Metadata_moa: Mechanism of Actions</li>
+        <li>Metadata_target: Known protein targets of the compound</li>
+    </ul></p>
     <p>We used the  Repurposing hub [<a href="https://clue.io/repurposing-app">https://clue.io/repurposing-app</a>], to annotate compounds with their mechanism-of-action (accessed on Feb. 28th 2018). For missing annotations,  we used other resources such as <a href="https://www.drugbank.ca">https://www.drugbank.ca</a>. [1] Corsello, S. M. et al. The Drug Repurposing Hub: a next-generation drug library and information resource. Nat. Med. 23, 405–408 (2017). </p>
 
     <h3>For more information</h3>
@@ -127,7 +126,7 @@
     by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"><a href="mailto:braymp@gmail.com">Mark Bray</a></span>. </p>
 
   <footer class="footer">
-        <p>This page last updated 2018-05-03</p>
+        <p>This page last updated 2018-05-17</p>
   </footer>
 
 	</div>
