--- a/htdocs/BBBC034/index.html
+++ b/htdocs/BBBC034/index.html
@@ -123,10 +123,14 @@
   [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
     <h3>Copyright</h3>
-    <p>These images are under copyright by the Allen Institute for Cell Science. Contact <a href="mailto:terms@alleninstitute.org">terms@alleninstitute.org</a> for more information about the copyright.</p>
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+    <img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by/4.0/88x31.png" /></a>
+    The images and ground truth are licensed under a
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International license</a>
+    by the Allen Institute for Cell Science</a>. Contact <a href="mailto:terms@alleninstitute.org">terms@alleninstitute.org</a> for more information about the copyright.
 
   <footer class="footer">
-        <p>This page last updated 2018-04-25</p>
+        <p>This page last updated 2018-05-17</p>
   </footer>
 
 
