add tif images to BBBC024 (resolves #23)

--- a/htdocs/BBBC024/index.html
+++ b/htdocs/BBBC024/index.html
@@ -90,7 +90,8 @@
     <tr>
       <th>clustering probability</th>
       <th>SNR</th>
-      <th>download images</th>
+      <th>download images (ICS)</th>
+      <th>(TIFF)</th>
     </tr>
   </thead>
   <tbody>
@@ -98,41 +99,49 @@
       <td>0%</td>
       <td>low</td>
       <td><a href="BBBC024_v1_c00_lowSNR_images.zip">BBBC024_v1_c00_lowSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c00_lowSNR_images_TIFF.zip">BBBC024_v1_c00_lowSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>0%</td>
       <td>high</td>
       <td><a href="BBBC024_v1_c00_highSNR_images.zip">BBBC024_v1_c00_highSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c00_highSNR_images_TIFF.zip">BBBC024_v1_c00_highSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>25%</td>
       <td>low</td>
       <td><a href="BBBC024_v1_c25_lowSNR_images.zip">BBBC024_v1_c25_lowSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c25_lowSNR_images_TIFF.zip">BBBC024_v1_c25_lowSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>25%</td>
       <td>high</td>
       <td><a href="BBBC024_v1_c25_highSNR_images.zip">BBBC024_v1_c25_highSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c25_highSNR_images_TIFF.zip">BBBC024_v1_c25_highSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>50%</td>
       <td>low</td>
       <td><a href="BBBC024_v1_c50_lowSNR_images.zip">BBBC024_v1_c50_lowSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c50_lowSNR_images_TIFF.zip">BBBC024_v1_c50_lowSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>50%</td>
       <td>high</td>
       <td><a href="BBBC024_v1_c50_highSNR_images.zip">BBBC024_v1_c50_highSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c50_highSNR_images_TIFF.zip">BBBC024_v1_c50_highSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>75%</td>
       <td>low</td>
       <td><a href="BBBC024_v1_c75_lowSNR_images.zip">BBBC024_v1_c75_lowSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c75_lowSNR_images_TIFF.zip">BBBC024_v1_c75_lowSNR_images_TIFF.zip</a></td>
     </tr>
     <tr>
       <td>75%</td>
       <td>high</td>
       <td><a href="BBBC024_v1_c75_highSNR_images.zip">BBBC024_v1_c75_highSNR_images.zip</a></td>
+      <td><a href="BBBC024_v1_c75_highSNR_images_TIFF.zip">BBBC024_v1_c75_highSNR_images_TIFF.zip</a></td>
     </tr>
   </tbody>
 </table>
@@ -207,7 +216,7 @@
 
   <footer class="footer">
 
-        <p>This page last updated 2015-10-06</p>
+        <p>This page last updated 2018-05-31</p>
 
 	</footer>
     </div>
