add Mohammad's datasets (resolves #18)

--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -235,6 +235,20 @@
     <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
   </tr>
   <tr>
+    <td><a href="BBBC036">BBBC036</a></td>
+    <td>Human U2OS Cells – profiling bioactive compounds using Cell Painting</td>
+    <td>Fluorescent</td>
+    <td class="count">6</td>
+    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC037">BBBC037</a></td>
+    <td>Human U2OS cells - Gene overexpression profiling experiment</td>
+    <td>Fluorescent</td>
+    <td class="count">9</td>
+    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
+  <tr>
     <td><a href="BBBC038">BBBC038</a></td>
     <td>Kaggle 2018 Data Science Bowl</td>
     <td>Fluorescent</td>
