--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -235,25 +235,18 @@
     <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
   </tr>
   <tr>
-    <td><a href="BBBC036">BBBC036</a></td>
-    <td>Human U2OS Cells – profiling bioactive compounds using Cell Painting</td>
-    <td>Fluorescent</td>
-    <td class="count">6</td>
-    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
-  </tr>
-  <tr>
-    <td><a href="BBBC037">BBBC037</a></td>
-    <td>Human U2OS cells - Gene overexpression profiling experiment</td>
-    <td>Fluorescent</td>
-    <td class="count">9</td>
-    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
-  </tr>
-  <tr>
     <td><a href="BBBC038">BBBC038</a></td>
     <td>Kaggle 2018 Data Science Bowl</td>
     <td>Fluorescent</td>
     <td class="count">735</td>
     <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC039">BBBC039</a></td>
+    <td>Nuclei of U2OS cells in a chemical screen</td>
+    <td>Fluorescent</td>
+    <td class="count">1</td>
+    <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a><a href="benchmarking.html#humanLabel" class="badge" rel="tooltip" title="Outlines of objects">O</a><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a></td>
   </tr>
 
       </tbody>
@@ -327,6 +320,20 @@
 	  <td class="count">13,200</td>
 	  <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
 	</tr>
+    <tr>
+      <td><a href="BBBC036">BBBC036</a></td>
+      <td>Human U2OS Cells – profiling bioactive compounds using Cell Painting</td>
+      <td>Fluorescent</td>
+      <td class="count">6</td>
+      <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+    </tr>
+    <tr>
+      <td><a href="BBBC037">BBBC037</a></td>
+      <td>Human U2OS cells - Gene overexpression profiling experiment</td>
+      <td>Fluorescent</td>
+      <td class="count">9</td>
+      <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+    </tr>
       </tbody>
 
       <thead>
