Update DSB dataset BBBBC038 (resolved #35)

--- a/htdocs/BBBC038/index.html
+++ b/htdocs/BBBC038/index.html
@@ -90,8 +90,8 @@
 
     <h3>Images</h3>
     <p>For each image in an image set, for example "stage1_train", there are two folders: 1) A folder named "images" that contains the image of the nuclei, and 2) a folder named "masks", which contains masks that map to every nuclei in the corresponding image.</p>
-    <p><a href="stage1_train.zip"><i class="icon-download-alt"></i> stage1_train.zip (82.9 MB)</a></p>
-    <p><a href="stage1_test.zip"><i class="icon-download-alt"></i> stage1_test.zip (9.5 MB)</a></p>
+    <p><a href="BBBC038-1.0.0-training.zip"><i class="icon-download-alt"></i> BBBC038-1.0.0-training.zip (113.3 MB)</a></p>
+    <p><a href="BBBC038-1.0.0-test.zip"><i class="icon-download-alt"></i> BBBC038-1.0.0-test.zip (295.9 MB)</a></p>
 
     <h3>Ground truth </h3>
     <p>In addition to the images there is an accompanying collection of annotations. The annotations were originally created by the Broad Imaging Platform. The annotations take the form of a collection of masks for each image of nuclei. Each mask is a PNG file that contains the segmentation of exactly one nuclei in a folder with the same name as the image it refers to. Like the masks, the images of nuclei are also PNG.</p>
@@ -111,7 +111,7 @@
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> Copyright: CC0. To the extent possible under law, the various contributors of the imagesets have waived all copyright and related or neighboring rights to <span property="dct:title">BBBC038v1</span>.</p>
 
   <footer class="footer">
-        <p>This page last updated 2018-05-03</p>
+        <p>This page last updated 2018-08-27</p>
   </footer>
 
 
