add dataset to image sets page

--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -248,6 +248,14 @@
     <td class="count">200</td>
     <td><a href="benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a><a href="benchmarking.html#humanLabel" class="badge" rel="tooltip" title="Outlines of objects">O</a><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a></td>
   </tr>
+  <tr>
+    <td><a href="BBBC041">BBBC041</a></td>
+    <td>P. vivax (malaria) infected human blood smears</td>
+    <td>Bright field</td>
+    <td class="count">1364</td>
+    <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a><a href="benchmarking.html#boundingBox" class="badge" rel="tooltip" title="Bounding Boxes">U</a></td>
+  </tr>
+
 
       </tbody>
 
@@ -333,6 +341,13 @@
       <td>Fluorescent</td>
       <td class="count">9</td>
       <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+    </tr>
+    <tr>
+      <td><a href="BBBC041">BBBC041</a></td>
+      <td>P. vivax (malaria) infected human blood smears</td>
+      <td>Bright field</td>
+      <td class="count">1364</td>
+      <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a><a href="benchmarking.html#boundingBox" class="badge" rel="tooltip" title="Bounding Boxes">U</a></td>
     </tr>
       </tbody>
 
