--- a/htdocs/BBBC038/index.html
+++ b/htdocs/BBBC038/index.html
@@ -96,9 +96,9 @@
     <h3>Ground truth </h3>
     <p>In addition to the images there is an accompanying collection of annotations. The annotations were originally created by the Broad Imaging Platform. The annotations take the form of a collection of masks for each image of nuclei. Each mask is a PNG file that contains the segmentation of exactly one nuclei in a folder with the same name as the image it refers to. Like the masks, the images of nuclei are also PNG.</p>
     <p>The ground truth and annotations were originally created by the Broad Imaging Platform using a combination of GIMP and a web-based annotation tool created internally. <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/54900">[annotation strategy]</a> <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/48347">[GIMP strategy]</a></p>
-    <p>Some publicly available improved annotations are available in these two github repositories:
-<a href="https://github.com/ibmua/data-science-bowl-2018-train-set">Data science bowl 2018 training set improved (Github repo)</a>
-<a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">Kaggle Data Science Bowl 2018 dataset fixes (Github repo)</a>
+    <p>Some publicly available improved annotations are available in these two github repositories:<br>
+<a href="https://github.com/ibmua/data-science-bowl-2018-train-set">[Data science bowl 2018 training set improved (Github repo)]</a><br>
+<a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">[Kaggle Data Science Bowl 2018 dataset fixes (Github repo)]</a>
 
     <h3>For more information</h3>
     <p>These images were curated from a variety of sources (below) by the Imaging Platform at the Broad Institute for the 2018 Data Science Bowl. Please contact the <a href="mailto:imagingadmin@broadinstitute.org">Imaging Platform</a> with any inquiries.
