link and contributions edits

--- a/htdocs/BBBC038/index.html
+++ b/htdocs/BBBC038/index.html
@@ -96,34 +96,33 @@
     <h3>Ground truth </h3>
     <p>In addition to the images there is an accompanying collection of annotations. The annotations were originally created by the Broad Imaging Platform. The annotations take the form of a collection of masks for each image of nuclei. Each mask is a PNG file that contains the segmentation of exactly one nuclei in a folder with the same name as the image it refers to. Like the masks, the images of nuclei are also PNG.</p>
     <p>The ground truth and annotations were originally created by the Broad Imaging Platform using a combination of GIMP and a web-based annotation tool created internally. <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/54900">[annotation strategy]</a> <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/48347">[GIMP strategy]</a></p>
-    <p>Some publicly available improved annotations are available in these two github repositories:
-<a href="https://github.com/ibmua/data-science-bowl-2018-train-set">Data science bowl 2018 training set improved (Github repo)</a>
-<a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">Kaggle Data Science Bowl 2018 dataset fixes (Github repo)</a>
-
+    <p>Some publicly available improved annotations are available in these two github repositories:<br>
+        <a href="https://github.com/ibmua/data-science-bowl-2018-train-set">[Data science bowl 2018 training set improved (Github repo)]</a><br>
+        <a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">[Kaggle Data Science Bowl 2018 dataset fixes (Github repo)]</a>
     <h3>For more information</h3>
-    <p>These images were curated from a variety of sources (below) by the Imaging Platform at the Broad Institute for the 2018 Data Science Bowl. Please contact the <a href="mailto:imagingadmin@broadinstitute.org">Imaging Platform</a> with any inquiries.
-    <h4>Contributors</h4>
-    <ul>
-        <li>Riki Eggert, King's College London</li>
-        <li>Donna McPhie, McLean Hospital</li>
-        <li>Andrew Bradley and Gustavo Carneiro</li>
-        <li>Mariko Taga, Columbia University</li>
-        <li>Matthew Stachler, Brigham and Women's Hospital</li>
-        <li>Chris Lee, MIT</li>
-        <li>Alexander Chamessian, Ji Lab, Duke University</li>
-        <li>Florian Barthelemy, Miceli Lab, Center for Duchenne muscular dystrophy, UCLA</li>
-        <li>Lorraine Montel, Ecole Normale Superieure</li>
-        <li>Glyn Nelson, Newcastle University</li>
-        <li>Tim Becker, Fraunhofer EMB</li>
-        <li>Maria Frias, Foster Lab, Hunter College</li>
-        <li>Philipp Keller</li>
-        <li>Christian Marinaccio, Northwestern University</li>
-        <li>Vasiliy Chernyshev, Skoltech</li>
-        <li>several biologists who wished to remain anonymous</li>
-        <li>And of course, the Carpenter lab, Broad Institute</li>
-    </ul
-
-    </p>
+   <p>These images were curated from a variety of sources by the Imaging Platform at the Broad Institute for the 2018 Data Science Bowl. Please contact the <a href="mailto:imagingadmin@broadinstitute.org">Imaging Platform</a>.</p>
+   <p>These images were curated from a variety of sources (below) by the Imaging Platform at the Broad Institute for the 2018 Data Science Bowl. Please contact the <a href="mailto:imagingadmin@broadinstitute.org">Imaging Platform</a> with any inquiries.</p>
+   <h4>Contributors</h4>
+   <ul>
+       <li>Riki Eggert, King's College London</li>
+       <li>Donna McPhie, McLean Hospital</li>
+       <li>Andrew Bradley and Gustavo Carneiro</li>
+       <li>Mariko Taga, Columbia University</li>
+       <li>Matthew Stachler, Brigham and Women's Hospital</li>
+       <li>Chris Lee, MIT</li>
+       <li>Alexander Chamessian, Ji Lab, Duke University</li>
+       <li>Florian Barthelemy, Miceli Lab, Center for Duchenne muscular dystrophy, UCLA</li>
+       <li>Lorraine Montel, Ecole Normale Superieure</li>
+       <li>Glyn Nelson, Newcastle University</li>
+       <li>Tim Becker, Fraunhofer EMB</li>
+       <li>Maria Frias, Foster Lab, Hunter College</li>
+       <li>Philipp Keller</li>
+       <li>Christian Marinaccio, Northwestern University</li>
+       <li>Vasiliy Chernyshev, Skoltech</li>
+       <li>several biologists who wished to remain anonymous</li>
+       <li>And of course, the Carpenter lab, Broad Institute</li>
+   </ul>
+    
 
 
     <h3>Published results using this image set</h3>
