--- a/htdocs/BBBC041/index.html
+++ b/htdocs/BBBC041/index.html
@@ -86,7 +86,7 @@
 
     <h3>For more information</h3>
     <p><p>These images were contributed by <a href="mailto:jyenhung@gmail.com">Jane Hung</a> of MIT and the Broad Institute in Cambridge, MA.</p>
-
+    <p>There is also a <a href="https://github.com/tobsecret/Awesome_Malaria_Parasite_Imaging_Datasets">Github reposity</a> that lists malaria parasite imaging datasets (blood smears).</p>
 
     <h3>Published results using this image set</h3>
     <p>These datasets will be evaluated in a publication to be submitted. </p>
