add BBBC042 dataset (resolves #5)

--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -255,7 +255,13 @@
     <td class="count">1364</td>
     <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a><a href="benchmarking.html#boundingBox" class="badge" rel="tooltip" title="Bounding Boxes">U</a></td>
   </tr>
-
+  <tr>
+    <td><a href="BBBC042">BBBC042</a></td>
+    <td>Rat astrocyte cells</td>
+    <td>Bright field</td>
+    <td class="count">1120</td>
+    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
 
       </tbody>
 
