--- a/htdocs/BBBC042/index.html
+++ b/htdocs/BBBC042/index.html
@@ -93,12 +93,10 @@
     <p>Please contact <a href="mailto:ilida.suleymanova@helsinki.fi">Ilida Suleymanova</a> regarding this dataset.</p>
 
     <h3>Published results using this image set</h3>
-    <p>The proposed data set will be evaluated in a publication to be submitted.</p>
-
+    <p>Suleymanova I, Balassa T, Tripathi S, et al. A deep convolutional neural network approach for astrocyte detection. Scientific Reports. 2018;8:12878. doi:<a href="https://doi.org/10.1038/s41598-018-31284-x">10.1038/s41598-018-31284-x</a>. PMCID: PMC6110828.</p>
     <h3>Recommended citation</h3>
-    <p>&quot;We used image set <a href="">BBBC042v1</a>, available from the Broad Bioimage Benchmark Collection
-    [<a href="https://doi.org/10.1101/335216">Caicedo et al., <i>bioRxiv</i>, 2018</a>].&quot;</p>
-
+    <p>&quot;We used image set <a href="">BBBC042v1</a> Suleymanova I. et al., available from the Broad Bioimage Benchmark Collection
+      [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
     <h3>Copyright</h3>
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> Copyright: CC0. To the extent possible under law, <a href="mailto:ilida.suleymanova@helsinki.fi">Ilida Suleymanova</a> has waived all copyright and related or neighboring rights to <span property="dct:title">BBBC042v1</span>.</p>
 
