added new dataset BBBC043

--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -262,6 +262,13 @@
     <td class="count">1200</td>
     <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
   </tr>
+  <tr>
+    <td><a href="BBBC043">BBBC043</a></td>
+    <td>Mouse hippocampal presynaptic terminals (vGlut-1 and vGat)</td>
+    <td>Fluorescent</td>
+    <td class="count">180</td>
+    <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a></td>
+  </tr>
 
       </tbody>
 
