add new section (Resolves #54)

--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -334,27 +334,6 @@
 	  <td class="count">144</td>
 	  <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
 	</tr>
-	<tr>
-	  <td><a href="BBBC021/">BBBC021</a></td>
-	  <td>Human MCF7 cells &ndash; compound-profiling experiment</td>
-	  <td>Fluorescent</td>
-	  <td class="count">13,200</td>
-	  <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
-	</tr>
-    <tr>
-      <td><a href="BBBC036">BBBC036</a></td>
-      <td>Human U2OS Cells – profiling bioactive compounds using Cell Painting</td>
-      <td>Fluorescent</td>
-      <td class="count">6</td>
-      <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
-    </tr>
-    <tr>
-      <td><a href="BBBC037">BBBC037</a></td>
-      <td>Human U2OS cells - Gene overexpression profiling experiment</td>
-      <td>Fluorescent</td>
-      <td class="count">9</td>
-      <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
-    </tr>
     <tr>
       <td><a href="BBBC041">BBBC041</a></td>
       <td>P. vivax (malaria) infected human blood smears</td>
@@ -392,7 +371,47 @@
 	  <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
 	</tr>
       </tbody>
+
+  <thead>
+  <tr>
+    <td colspan="5"><h3>Image-based Profiling</h3></td>
+  </tr>
+	<tr>
+	  <th>Accession</th>
+	  <th>Description</th>
+	  <th><a href="#" rel="tooltip" title="Imaging mode">Mode</a></th>
+	  <th><a href="#" rel="tooltip" title="Fields of view">Fields</a></th>
+	  <th>Ground truth</th>
+	</tr>
+  <tbody>
+  <tr>
+	  <td><a href="BBBC021/">BBBC021</a></td>
+	  <td>Human MCF7 cells &ndash; compound-profiling experiment</td>
+	  <td>Fluorescent</td>
+	  <td class="count">13,200</td>
+	  <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+	</tr>
+  <tr>
+    <td><a href="BBBC036">BBBC036</a></td>
+    <td>Human U2OS Cells – profiling bioactive compounds using Cell Painting</td>
+    <td>Fluorescent</td>
+    <td class="count">6</td>
+    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
+  <tr>
+    <td><a href="BBBC037">BBBC037</a></td>
+    <td>Human U2OS cells - Gene overexpression profiling experiment</td>
+    <td>Fluorescent</td>
+    <td class="count">9</td>
+    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
+
+  </thead>
+
+
   </table>
+  <br>
+  <br>
 
 
 	</div>
