updates to 21,38,19 (resolves #1, #72)

--- a/htdocs/BBBC021/index.html
+++ b/htdocs/BBBC021/index.html
@@ -282,6 +282,10 @@ format) of most of the compounds. The fields are:</p>
 
 <p><a href="BBBC021_v1_moa.csv"><i class="icon-download-alt"></i> BBBC021_v1_moa.csv (4393 bytes)</a></p>
 
+<h3>CellProfiler pipelines</h2>
+<p><a href="analysis.cppipe"> CellProfiler analysis pipeline</a></p>
+<p><a href="illum.cppipe"> CellProfiler illumination pipeline</a></p>
+
     <h3>Published results using this image set</h3>
     <p>The prediction of Mechanism-of-Action was performed with restrictions on the
 possible match. Not-Same-Compound (NSC) does not allow a match to the same
