--- a/htdocs/BBBC044/index.html
+++ b/htdocs/BBBC044/index.html
@@ -98,7 +98,7 @@
     <p><a href="BBBC044_v1_validation.zip"><i class="icon-download-alt"></i> BBBC044_v1_validation.zip (325 Mb)</a></p>
 
     <h3>For more information</h3>
-    <p>Please contact <a href="mailto:gherardo.varando@upm.es">Gherardo Varando</a> regarding this dataset.</p>
+    <p>Please contact <a href="mailto:gherardo.varando@math.ku.dk">Gherardo Varando</a> regarding this dataset.</p>
 
     <h3>Published results using this image set</h3>
     <p>Varando G, et al. MultiMap: A Tool to Automatically Extract and Analyse Spatial Microscopic Data From Large Stacks of Confocal Microscopy Images. Front. Neuroanat. 2018;12:37. doi:<a href="https://doi.org/10.3389/fnana.2018.00037">10.3389/fnana.2018.00037</a>. PMCID: PMC5974206 </p>
@@ -108,7 +108,7 @@
     <h3>Copyright</h3>
 
     <p><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" rel="license"><img alt="CC0" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"></a> The images and ground truth are licensed under a
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a> by <a href="mailto:gherardo.varando@upm.es">Gherardo Varando</a>, <a href="mailto:rbp@cajal.csic.es">Ruth Benavides-Piccione </a>, <a href="mailto:amunozc@bio.ucm.es"> Alberto Muñoz</a>, <a href="mailto:kastanauskaite@gmail.com"> Asta Kastanauskaite</a>.</p>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a> by <a href="mailto:gherardo.varando@math.ku.dk">Gherardo Varando</a>, <a href="mailto:rbp@cajal.csic.es">Ruth Benavides-Piccione </a>, <a href="mailto:amunozc@bio.ucm.es"> Alberto Muñoz</a>, <a href="mailto:kastanauskaite@gmail.com"> Asta Kastanauskaite</a>.</p>
 
   <footer class="footer">
         <p>This page last updated 2019-04-05</p>
