add carolina's missing data (resolves #75)

--- a/htdocs/BBBC010/index.html
+++ b/htdocs/BBBC010/index.html
@@ -92,7 +92,7 @@
       Original image size is 696 x 520 pixels.  Images are available in
       16-bit TIF.</p>
 
-    <p><a href="BBBC010_v1_images.zip"><i class="icon-download-alt"></i> BBBC010_v1_images.zip (64 MB)</a></p>
+    <p><a href="BBBC010_v2_images.zip"><i class="icon-download-alt"></i> BBBC010_v2_images.zip (70 MB)</a></p>
 
     <h3>Ground truth <a href="../benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a> <a href="../benchmarking.html#foregroundBackground" class="badge" rel="tooltip" title="Foreground/background">F</a> <a href="../benchmarking.html#humanLabel" class="badge" rel="tooltip" title="Outlines of objects">O</a></h3>
 
@@ -101,8 +101,7 @@
       <tr>
 	<td><a href="../benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
 	<td>
-    <p>The 384 images are from a plate of positive and
-	negative controls.  The images are named using this format:
+    <p>The 100 images are from a 384-well plate of positive and negative controls.  The images are named using this format:
 	&lt;plate&gt;_&lt;wellrow&gt;_&lt;wellcolumn&gt;_&lt;wavelength&gt;_&lt;fileid&gt;.tif
 
       Columns 1-12 are positive controls treated with ampicillin.  Columns 13-24 are untreated negative controls.  </p>
@@ -160,7 +159,7 @@
     [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
   <footer class="footer">
-        <p>This page last updated 2018-01-31</p>
+        <p>This page last updated 2019-04-08</p>
   </footer>
 
 
