add 045 to image sets list

--- a/htdocs/image_sets.html
+++ b/htdocs/image_sets.html
@@ -269,6 +269,13 @@
     <td class="count">180</td>
     <td><a href="benchmarking.html#cellCounting" class="badge" rel="tooltip" title="Counts">C</a></td>
   </tr>
+  <tr>
+    <td><a href="BBBC045">BBBC045</a></td>
+    <td>Human White Blood Cells</td>
+    <td>Bright field</td>
+    <td class="count">1</td>
+    <td><a href="benchmarking.html#bioLabel" class="badge" rel="tooltip" title="Biological labels">B</a></td>
+  </tr>
 
       </tbody>
 
